fixed navbar covering h1 in home in tablet

--- a/src/styles/Less/app.less
+++ b/src/styles/Less/app.less
@@ -50,6 +50,9 @@ body {
       width: 100%;
       object-fit: cover;
       height: 100vh;
+      @media @tablet {
+        height: 150vh;
+      }
     }
     @media @phone {
       white-space: inherit;
